chore: fix alignment on newsroom

--- a/src/scss/section/_newsCard.scss
+++ b/src/scss/section/_newsCard.scss
@@ -1,10 +1,19 @@
 .newsroom-card {
-  margin: 2.5% 2.5%;
+  margin-bottom: 6%;
   border: 1px solid $gray-600;
-  min-width: 355px !important;
+  min-width: 316px;
+
+  &:nth-child(3n + 2) {
+    margin-right: 6%;
+  }
+
+  &:nth-child(3n + 1) {
+    margin-right: 6%;
+  }
+
   .card-header {
     img {
-      max-width: 100%;
+      width: 100%;
       height: 130px;
     }
   }
