--- a/src/scss/section/_reviewCard.scss
+++ b/src/scss/section/_reviewCard.scss
@@ -1,3 +1,6 @@
+.cards-container {
+  max-width: 1080px;
+}
 .review-card {
   div.card-header {
     h2 {
